<resources>
    <string name="app_name">NewChat</string>
    <string name="cancel">Cancel</string>
    <string name="disconnect">Disconnect</string>
    <string name="run_as_server">Run as server</string>
    <string name="run_as_client">Run as client</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="waiting_for_client">Waiting for client …</string>
    <string name="connecting_to_server">Connecting to server …</string>
    <string name="failed_to_start_server">Failed to start server</string>
    <string name="failed_to_start_client">Failed to start client</string>
    <string name="server_ip">Server IP</string>
    <string name="enter_server_ip">Enter Server IP</string>
    <string name="ok">OK</string>
    <string name="invalid_ip">Invalid IP</string>
</resources>