<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:isScrollContainer="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/ip"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="360dp" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="Your status" />

    <LinearLayout
        android:id="@+id/control_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:visibility="gone" />

        <Button
            android:id="@+id/disconnect_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disconnect"
            style="?android:attr/buttonBarButtonStyle"
            android:visibility="gone" />

        <Button
            android:id="@+id/run_as_server_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/run_as_server"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/run_as_client_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/run_as_client"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/chat_records"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/msg_edit"
                    android:layout_width="250dp"
                    android:layout_height="48dp"
                    android:singleLine="true"
                    android:layout_marginStart="20dp"
                    android:inputType="text"
                    android:hint="@string/message"
                    android:autofillHints="@string/message" />

                    <Button
                        android:id="@+id/send_button"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginStart="20dp"
                        android:text="@string/send" />

                </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>